--- a/src/application/components/common/header/Header.css
+++ b/src/application/components/common/header/Header.css
@@ -3,6 +3,13 @@
     width: 100%;
     background-color: deepskyblue;
     height: 56px;
+    top: 0;
+    left: 0;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    box-sizing: border-box;
+    z-index: 90;
 
 }
 
@@ -12,13 +19,19 @@
     align-items: center;
     padding: 0.1rem;
 }
-
-.header__logo {
-    margin-left: 1rem;
-}
-
-.header__logo a {
-    color: wheat;
-    text-decoration: none;
-    font-size: 1.5rem;
-}
+.menu-button {
+    position: fixed;
+    z-index: 100;
+    -webkit-transform: translate(15px, 15px);
+    transform: translate(15px, 15px);
+    font-size: 1.35rem important!;
+    background-color: #e9ecef;
+    padding: 2px;
+    border-color: #ced4da;
+    width: 42px;
+    box-shadow: 0.15rem 0.25rem 0.35rem rgba(0, 0, 0, 0.25);
+  }
+  
+  .header_text {
+      align-items: center ;
+  }
