--- a/src/application/components/common/header/Header.css
+++ b/src/application/components/common/header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    position: fixed;
+    position: sticky;
     width: 100%;
     background-color: deepskyblue;
     height: 56px;
@@ -9,7 +9,7 @@
     align-items: center;
     padding: 0 20px;
     box-sizing: border-box;
-    z-index: 90;
+    z-index: 100;
 
 }
 
